--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Service-center</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -90,7 +91,7 @@
                         <div><img src="./images/desctop-icon.svg" alt=""></div><a href="#">Телевизоры</a>
                     </li>
                     <li>
-                        <div><a href="">Ещё устройства</a>
+                        <div><a href="">Ещё устройства</a></div>
                     </li>
                 </ul>
             </div>
@@ -105,7 +106,7 @@
             <div class="container-fluid">
                 <div class="content">
                     <h1>Сервисный центр умных устройств в Санкт-Петербурге</h1>
-                    <h2>Подзаголовок будет здесь поменьше и покороче, будет нести очень много смысла очень тут</p>
+                    <h2>Подзаголовок будет здесь поменьше и покороче, будет нести очень много смысла очень тут</h2>
                 </div>
             </div>
 
@@ -123,7 +124,7 @@
                                 </div>
                                 <form action="#">
                                     <input type="text" placeholder="Ваше имя">
-                                    <input type="tel" placeholder="+7(___)-___-__-__" id="phone">
+                                    <input type="tel" placeholder="+7(___)-___-__-__" id="phone1">
                                     <button>Оставить заявку</button>
                                     <label>
                                         <input type="checkbox" class="checkbox">
@@ -151,7 +152,7 @@
                                 </div>
                                 <div class="slide-arrows">
                                     <a class="left-arrow">
-                                        <svg width="31" height="25" viewBox="0 0 31 25" fill="#B7B7B7">
+                                        <svg width="31" height="25" viewbox="0 0 31 25" fill="#B7B7B7">
                                             <path
                                                 d="M1.31119 12.0422L30.3919 12.0422C30.6456 12.0422 30.8516 12.2481 30.8516 12.5018C30.8516 12.7555 30.6456 12.9614 30.3919 12.9614L1.31119 12.9614C1.05748 12.9614 0.851563 12.7555 0.851563 12.5018C0.851563 12.2481 1.05748 12.0422 1.31119 12.0422Z" />
                                             <path
@@ -159,7 +160,7 @@
                                         </svg>
                                     </a>
                                     <a class="right-arrow">
-                                        <svg width="31" height="25" viewBox="0 0 31 25" fill="#B7B7B7">
+                                        <svg width="31" height="25" viewbox="0 0 31 25" fill="#B7B7B7">
                                             <path
                                                 d="M30.4701 12.9603H1.38932C1.1356 12.9603 0.929688 12.7544 0.929688 12.5006C0.929688 12.2469 1.1356 12.041 1.38932 12.041H30.4701C30.7238 12.041 30.9297 12.2469 30.9297 12.5006C30.9297 12.7544 30.7238 12.9603 30.4701 12.9603Z" />
                                             <path
@@ -204,7 +205,7 @@
                 <h2>Популярные модели</h2>
                 <div class="wide-content">
                     <a class="left-arrow">
-                        <svg width="31" height="25" viewBox="0 0 31 25" fill="#B7B7B7">
+                        <svg width="31" height="25" viewbox="0 0 31 25" fill="#B7B7B7">
                             <path
                                 d="M1.31119 12.0422L30.3919 12.0422C30.6456 12.0422 30.8516 12.2481 30.8516 12.5018C30.8516 12.7555 30.6456 12.9614 30.3919 12.9614L1.31119 12.9614C1.05748 12.9614 0.851563 12.7555 0.851563 12.5018C0.851563 12.2481 1.05748 12.0422 1.31119 12.0422Z" />
                             <path
@@ -259,7 +260,7 @@
                         <button>Оставить заявку</button>
                     </div>
                     <a class="right-arrow">
-                        <svg width="31" height="25" viewBox="0 0 31 25" fill="#B7B7B7">
+                        <svg width="31" height="25" viewbox="0 0 31 25" fill="#B7B7B7">
                             <path
                                 d="M30.4701 12.9603H1.38932C1.1356 12.9603 0.929688 12.7544 0.929688 12.5006C0.929688 12.2469 1.1356 12.041 1.38932 12.041H30.4701C30.7238 12.041 30.9297 12.2469 30.9297 12.5006C30.9297 12.7544 30.7238 12.9603 30.4701 12.9603Z" />
                             <path
@@ -535,7 +536,7 @@
                     </div>
                     <form action="#">
                         <input type="text" placeholder="Ваше имя">
-                        <input type="tel" placeholder="+7(___)-___-__-__" id="phone">
+                        <input type="tel" placeholder="+7(___)-___-__-__" id="phone2">
                         <button>Оставить заявку</button>
                         <label>
                             <input type="checkbox" class="checkbox">
@@ -672,7 +673,7 @@
                         <div><img src="./images/desctop-icon.svg" alt=""></div><a href="#">Телевизоры</a>
                     </li>
                     <li>
-                        <div><a href="">Ещё устройства</a>
+                        <div><a href="">Ещё устройства</a></div>
                     </li>
                 </ul>
             </div>
