adapted from 1200px viewport

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="container-fluid">
-            <div class="content">
+            <div class="content search-row">
 
                 <a href="#" class="main-logo" title="На главную">Company</a>
 
@@ -215,7 +215,7 @@
                     <div class="model-card">
                         <div class="discount">Скидка 15%</div>
                         <img src="./images/samsung-img.png" alt="">
-                        <div>
+                        <div class="model-description">
                             <span class="model-name">Samsung NP305U1A</span>
                             <span class="repair-time">Ремонт от 30 мин.</span>
                             <span class="price-min">от 750 руб.</span>
@@ -224,7 +224,7 @@
                     </div>
                     <div class="model-card">
                         <img src="./images/xiaomi-img.png" alt="">
-                        <div>
+                        <div class="model-description">
                             <span class="model-name">Xiaomi V3-571G-532...</span>
                             <span class="repair-time">Ремонт от 30 мин.</span>
                             <span class="price-min">от 750 руб.</span>
@@ -234,7 +234,7 @@
                     <div class="model-card">
                         <div class="discount">Скидка 15%</div>
                         <img src="./images/iphone-img.png" alt="">
-                        <div>
+                        <div class="model-description">
                             <span class="model-name">Iphone 6</span>
                             <span class="repair-time">Ремонт от 30 мин.</span>
                             <span class="price-min">от 750 руб.</span>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="model-card">
                         <img src="./images/lg-img.png" alt="">
-                        <div>
+                        <div class="model-description">
                             <span class="model-name">LG 17-ab204ng</span>
                             <span class="repair-time">Ремонт от 30 мин.</span>
                             <span class="price-min">от 750 руб.</span>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="model-card">
                         <img src="./images/asus-img.png" alt="">
-                        <div>
+                        <div class="model-description">
                             <span class="model-name">Asus pro P53SJ-SO0...</span>
                             <span class="repair-time">Ремонт от 30 мин.</span>
                             <span class="price-min">от 750 руб.</span>
@@ -426,7 +426,7 @@
         <section class="best-service-center">
             <div class="container-fluid">
                 <h2>Самый лучший в мире сервисный центр</h2>
-                <div class="content">
+                <div class="content repair-description">
                     <div class="text-content">
                         <p>Ремонт техники всегда проходит по слаженной схеме. Потенциальный клиент изучает
                             предоставленную информацию и убеждается в том, что сотрудничество обещает быть успешным.
