--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Service-center</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
@@ -57,8 +68,32 @@
                     <input type="text" placeholder="Поиск">
                 </form>
 
+                <button class="search-button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <svg aria-hidden="true" viewbox="0 0 512 512">
+                        <path fill="#ffffff"
+                            d="M 508.5 481.6 l -129 -129 c -2.3 -2.3 -5.3 -3.5 -8.5 -3.5 h -10.3 C 395 312 416 262.5 416 208 C 416 93.1 322.9 0 208 0 S 0 93.1 0 208 s 93.1 208 208 208 c 54.5 0 104 -21 141.1 -55.2 V 371 c 0 3.2 1.3 6.2 3.5 8.5 l 129 129 c 4.7 4.7 12.3 4.7 17 0 l 9.9 -9.9 c 4.7 -4.7 4.7 -12.3 0 -17 Z M 208 384 c -97.3 0 -176 -78.7 -176 -176 S 110.7 32 208 32 s 176 78.7 176 176 s -78.7 176 -176 176 Z">
+                        </path>
+                    </svg>
+                </button>
+                <div class="dropdown-menu search-dropdown" aria-labelledby="dropdownMenuButton">
+                    <form action="#" class="dropdown-search-form">
+                        <input type="text" placeholder="Поиск">
+                        <button type="reset" class="close">
+                            <span>&times;</span>
+                        </button>
+                    </form>
+                    <div class="devices-links">
+                        <div><img src="./images/smartphone-icon.svg" alt=""><a href="#">Смартфоны</a></div>
+                        <div><img src="./images/tablet-icon.svg" alt=""><a href="#">Планшеты</a></div>
+                        <div><img src="./images/laptop-icon.svg" alt=""><a href="#">Ноутбуки</a></div>
+                        <div><img src="./images/all-in-one-icon.svg" alt=""><a href="#">Моноблоки</a></div>
+                        <div><img src="./images/desctop-icon.svg" alt=""><a href="#">Компьютеры</a></div>
+                        <div><img src="./images/desctop-icon.svg" alt=""><a href="#">Телевизоры</a></div>
+                    </div>
+                </div>
+
                 <div class="phone-and-worktime">
-                    <span>8 999 098 98 98</span>
+                    <span class="phone">8 999 098 98 98</span>
                     <img src="./images/clock-icon.svg" alt="">
                     <span>Режим работы 9:00 - 21:00</span>
                 </div>
@@ -69,7 +104,7 @@
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid devices-row">
             <div class="content">
                 <ul class="devices-list">
                     <li>
@@ -630,7 +665,7 @@
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid footer-search-row">
             <div class="content">
 
                 <a href="#" class="main-logo" title="На главную">Company</a>
@@ -640,7 +675,7 @@
                 </form>
 
                 <div class="phone-and-worktime">
-                    <span>8 999 098 98 98</span>
+                    <span class="phone">8 999 098 98 98</span>
                     <img src="./images/clock-icon.svg" alt="">
                     <span>Режим работы 9:00 - 21:00</span>
                 </div>
@@ -651,7 +686,7 @@
             </div>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid devices-row">
             <div class="content">
                 <ul class="devices-list">
                     <li>
@@ -688,7 +723,6 @@
 
     </footer>
 
-    <script src="./js/jquery.js"></script>
     <script src="./js/jquery.maskedinput.js"></script>
     <script src="./js/script.js"></script>
 
